# DoctorDoom

./: Address.h  AddressExtractor.cpp  AddressExtractor.h  AddressExtractorTest.cpp  CMakeLists.txt  CurlHttp.cpp  CurlHttp.h  Http.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp  README.md
